# a3_openvx

./: CMakeLists.txt  canny.cpp  main.cpp
